# example_solana_pay

./: README.md
app/src/pages/api/: hello.ts
app/src/views/home/: index.tsx
program/: Anchor.toml
program/programs/example-solana-pay/: Cargo.toml
program/programs/example-solana-pay/src/: lib.rs
program/tests/: example-solana-pay.ts
